# qdbus-signal-test

client/: CMakeLists.txt  README.md
client/src/: CMakeLists.txt  client.cpp  client.h  main.cpp  reply.h
server/: README.md
server/src/: CMakeLists.txt  main.cpp  server.cpp  server.h
